Nineteen68#2298: In Mozilla Firefox Reports landing page,Page scroll is visible.Fixed

--- a/public/css/css_reports/footer.css
+++ b/public/css/css_reports/footer.css
@@ -5,7 +5,6 @@
 	bottom: 0;
 	width: 100%;
 	height: 40px;
-	line-height: 40px;
 	background-color: #eee;
 }
 
@@ -18,7 +17,7 @@
 .small {
 	color: #643693 !important;
 	position: relative;
-	top: -5px;
+	top: 2px;
 }
 
 .card-footer {
